--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.7.1",
     "react-select": "^5.10.2"
