--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-hook-form": "^7.62.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.7.1",
-    "react-select": "^5.10.2"
+    "react-select": "^5.10.2",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
