--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@mui/x-charts": "^8.9.2",
+    "chart.js": "^4.5.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
     "react-pro-sidebar": "^1.1.0",
